--- a/vue/index.html
+++ b/vue/index.html
@@ -12,3 +12,14 @@
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
+<script>
+  if ('serviceWorker' in navigator) {
+    navigator.serviceWorker.register('https://localhost:3000/service-worker.js')
+      .then(registration => {
+        console.log('ServiceWorker registration successful with scope: ', registration.scope);
+      })
+      .catch(error => {
+        console.log('ServiceWorker registration failed: ', error);
+      });
+  }
+</script>
