--- a/vue/index.html
+++ b/vue/index.html
@@ -14,7 +14,7 @@
 </html>
 <script>
   if ('serviceWorker' in navigator) {
-    navigator.serviceWorker.register('https://localhost:3000/service-worker.js')
+    navigator.serviceWorker.register('/service-worker.js')
       .then(registration => {
         console.log('ServiceWorker registration successful with scope: ', registration.scope);
       })
