Update web page title

--- a/vue/index.html
+++ b/vue/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Flask + Vue Template</title>
+    <title>Anonymiseringsværktøj - Randers Kommune</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.0.943/pdf.min.js"></script>
   </head>
   <body id="body">
