Update CSS for QoL/UX

--- a/vue/index.html
+++ b/vue/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Anonymiseringsværktøj - Randers Kommune</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.0.943/pdf.min.js"></script>
+    <script src="https://kit.fontawesome.com/6c4a1f4281.js" crossorigin="anonymous"></script>
   </head>
   <body id="body">
     <div id="app"></div>
